# slew

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml
.github/workflows/: ci.yml
docs/: CONTROL_LAW.md
include/slew/: controller.hpp  quaternion.hpp  rigid_body.hpp  simulation.hpp  vec3.hpp
src/: main.cpp  simulation.cpp
test/: framework.hpp  test_controller.cpp  test_csv.cpp  test_determinism.cpp  test_main.cpp  test_quaternion.cpp  test_rigid_body.cpp  test_validate.cpp
